# TheArtofStances

./: CMakeLists.txt  README.md  vcpkg.json
cmake/lib/: automaticGameFolderOutput.cmake
data/SKSE/Plugins/: Stances.ini
data/SKSE/Plugins/CustomSkills/: SKILLS.json
data/SKSE/Plugins/CustomSkills/Stances/: Stances.json
include/: CustomSkillsAPI.h  Events.h  Hooks.h  KillXP.h  MCP.h  Manager.h  PCH.h  Plugin.h  Serialization.h  Settings.h  Utils.h  logger.h
src/: CustomSkillsAPI.cpp  Events.cpp  Hooks.cpp  KillXP.cpp  MCP.cpp  Manager.cpp  Serialization.cpp  Settings.cpp  plugin.cpp
